    * Support for album artists in USB Mass Storage collection.
    * album artist (if differs from artist), BPM, labels, last played time and
      bitrate are now shown in playlist track tooltip (if not already displayed
      in playlist)
    * Volume normalization: ReplayGain is now converted to iPod Sound Check and
      vice versa. (BR 142579)

  CHANGES:
    * When writing covers to files, all existing covers will be replaced.
    * PulseAudio status in diagnostic dialog.
    * optional libgpod dependency raised to 0.8.2 to support newest iPods.
    * Amarok now prevents accidental unmounting of iPods in (small) time-frames
      when iTunes database on iPod is not yet updated.
    * Amarok detects when iPod is to be ejected from system and gracefully
      disconnects it when it occurs.
    * Hitting the eject button on iPod collection ejects it also from the system.
    * iPod collection now detects whether iPod is safe to write and marks iPod
      as read-only if not. This prevents "iPod shows 0 tracks" problem.
    * Correct progress bar advancement when transferring tracks to iPod. (BR 139454)
    * iPod Collection supports multiple simultaneous cancellable transfers.
      (BR 219963)
    * Improved dialog to initialize iPod. (BR 279797)
    * Load tracks in playlists asynchronously using proxy tracks. (BR 295199)
    * It is now possible to transcode tracks when moving them. (BR 280526)
    * Drag & drop of tracks and playlists to Saved Playlists works in all cases.
    * Don't show unmounted USB Mass Storage devices and make it clear when
      the device is not "activated" yet.
    * "Devices" in Amarok configuration -> Plugins is with other related strings
      renamed to "Local Collection Backends" to reduce user confusion.
    * Enable keyboard activation of PlaylistBrowser items. 
    * Don't use `mysql_config --variable=pkgincludedir`, find mysql include
      directory manually by looking up mysql.h.